# WholeBIFRDB-build-v3

./: CHANGELOG.md  FILES.md  FILE_TREE.txt  LICENSE  README.md  jp_comment_report.csv  pyproject.toml
data/: BrainRegions.csv
docs/: architecture.md  test_design.md  test_results.md
pder/: README.md  pipeline.py  prompts.py
pder/data/: papers_input_example.csv
pder/stages/: stage1_summarize.py  stage2_extract_methods.py  stage3_score_methods.py
src/: compute_summarized_cr.py  credibility_calculator.py  enrich_dhba.py  enrich_references.py  import_bdbra_into_wholebif_v4_enhanced_patched.py  manual_to_bdbra_converter.py  method_lexicon.py  openai_client.py  pipeline.py  prompts_gpt52.py  pubmed_clients.py  pubmed_projection_miner_gpt52.py  region_normalizer.py  schema.py  score_records.py
tests/: conftest.py  test_converter.py  test_credibility.py  test_pipeline.py
tools/: score_citation_sentiment.py  score_pder_with_claude_api.py
